@@ -40,9 +40,11 @@
 #ifndef PORTAUDIO_DEV
 #define DECODER_BUFFER_SIZE	(3072*1024)
 #define OUTPUT_BUFFER_SIZE	(10*2*44100*4)
+#define PA_DEFAULT_DEVICE	(-1)
 #else
 #define DECODER_BUFFER_SIZE	(3072*1024)
 #define OUTPUT_BUFFER_SIZE	(10*2*44100*4)
+#define PA_DEFAULT_DEVICE	(0)
 #endif
 
 #define AUDIO_CHUNK_SIZE 8192
